- Resolve firefox/edge no slide outline. Fix vertical navigation bars text is not showing in firefox.

--- a/client/src/nav.css
+++ b/client/src/nav.css
@@ -4,9 +4,7 @@
 }
 
 #navSlide {
-	width: 100%;
-	height: 100%;
-	fill: rgba(0, 0, 0, 1);
+	fill: rgb(0, 0, 0);
 }
 
 #navSlideContainer {
@@ -16,7 +14,7 @@
 }
 
 #navSlideMask {
-	fill: rgba(255, 255, 255, 0.6);
+	fill: rgb(153, 153, 153);
 }
 
 #navContent {
@@ -28,12 +26,18 @@
 }
 
 .navArrow {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display: block;
 	color: rgba(255, 255, 255, 0.8);
 	position: absolute;
 	font-family: Text;
+}
+
+.navArrow>label {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: inherit;
 }
 
 .navArrow:hover {
@@ -44,17 +48,16 @@
 	width: 40px;
 	top: 40px;
 	bottom: 40px;
+}
+.navArrowVertical>label {
 	writing-mode: vertical-lr;
+
 }
 
 .navArrowHorizontal {
-	min-width: 100%;
-	max-width: 100%;
+	left: 40px;
+	right: 40px;
 	height: 40px;
-}
-
-.navArrowHorizontal > label {
-	transform: rotate(90deg);
 }
 
 #navArrowN {
